--- a/mixins/_protect.scss
+++ b/mixins/_protect.scss
@@ -2,8 +2,8 @@
   position: relative;
   z-index: 1;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  -webkit-touch-callout: none; // リンク長押しのポップアップメニューを解除
-  user-select: none; // 選択を無効
+  -webkit-touch-callout: none;
+  user-select: none;
 
   &::after {
     content: ' ';
@@ -23,3 +23,4 @@
     -webkit-touch-callout: none;
     user-select: none;
   }
+}
