--- a/mixins/_mq.scss
+++ b/mixins/_mq.scss
@@ -30,7 +30,7 @@
 }
 
 @mixin desktop {
-  @include media-query(min-width, #{$desktop-width}) {
+  @include mq(min-width, #{$desktop-width}) {
     @content;
   }
 }
